--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>    
             <div class="side-bottom">
-                <div class="install flex opacity font-65">
+                <div class="install flex font-65">
                     <div>
                         <img src="./img/download.svg" alt="download"><p> Installa app</p>
                     </div>
@@ -137,15 +137,32 @@
     <!-- PLAYER SECTION -->
     <footer class="flex">
         <div class="left-footer flex">
-
+            
+            <img src="./img/sinister.jpeg" alt="player image">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-folder"></i>
+               
         </div>
 
         <div class="center-footer flex">
+            <div class="top-footer">
+                <i class="fa-solid fa-shuffle"></i>
+                <i class="fa-solid fa-backward-step"></i>
+                <i class="fa-solid fa-play"></i>
+                <i class="fa-solid fa-forward-step"></i>
+                <i class="fa-solid fa-arrow-rotate-right"></i>
+            </div>
+
+            <div class="bottom-footer">
+
+            </div>
 
         </div>
 
         <div class="right-footer flex">
-
+            <i class="fa-solid fa-list"></i>
+            <i class="fa-solid fa-display"></i>
+            <i class="fa-solid fa-volume-high"></i>
         </div>
     </footer>
 </body>
