--- a/index.html
+++ b/index.html
@@ -85,42 +85,42 @@
                         <img src="./img/metal_lifting.jpg" alt="">
                         <div class="overlay"></div>
                         <h4>Heavy Metal</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/stranger.jpeg" alt="">
                         <div class="overlay"></div>
                         <h4>Stranger Things</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/aquietplace.jpeg" alt="">
                         <div class="overlay"></div>
                         <h4>A Quiet Place</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/split.jpeg" alt="">
                         <div class="overlay"></div>
                         <h4>Split</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/cure.jpeg" alt="">
                         <div class="overlay"></div>
                         <h4>A Cure for Wellness</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/sinister.jpeg" alt="">
                         <div class="overlay"></div>
                         <h4>Sinister</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
                 </div>
             </section>    
@@ -132,14 +132,14 @@
                         <img src="./img/radar.jpeg" alt="">
                         <div class="overlay"></div>
                         <h4>Release Radar</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/mixdaily.jpeg" alt="">
                         <div class="overlay"></div>
                         <h4>Daily Mix 1</h4>
-                        <p class="opacity">Subtitle</p>
+                        <p class="opacity font-65">Subtitle</p>
                     </div>
                 </div>    
             </section>
@@ -152,14 +152,14 @@
                     <img src="./img/youg.jpeg" alt="">
                     <div class="overlay"></div>
                     <h4>XX</h4>
-                    <p class="opacity">Subtitle</p>
+                    <p class="opacity font-65">Subtitle</p>
                 </div>
 
                 <div class="card">
                     <img src="./img/einaudi.jpeg" alt="">
                     <div class="overlay"></div>
                     <h4>YY</h4>
-                    <p class="opacity">Subtitle</p>
+                    <p class="opacity font-65">Subtitle</p>
                 </div>
             </div>    
         </section>
