--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h3>PLAYLIST</h3>
 
                     <ul class="playlist-ul opacity">
-                        <li><i class="fa-solid fa-plus-large"></i>Crea Playlist</li>
+                        <li><span>+</span> Crea Playlist</li>
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
@@ -46,9 +46,8 @@
             </div>    
             <div class="side-bottom">
                 <div class="install flex font-65">
-                    <div>
+                    
                         <img src="./img/download.svg" alt="download"><p> Installa app</p>
-                    </div>
 
                 </div>
                 <hr>
@@ -83,42 +82,42 @@
 
                     <div class="card">
                         <img src="./img/metal_lifting.jpg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>Heavy Metal</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/stranger.jpeg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>Stranger Things</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/aquietplace.jpeg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>A Quiet Place</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/split.jpeg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>Split</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/cure.jpeg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>A Cure for Wellness</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/sinister.jpeg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>Sinister</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
@@ -130,14 +129,14 @@
                 <div class="cards flex">
                     <div class="card">
                         <img src="./img/radar.jpeg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>Release Radar</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
 
                     <div class="card">
                         <img src="./img/mixdaily.jpeg" alt="">
-                        <div class="overlay"></div>
+                        <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>Daily Mix 1</h4>
                         <p class="opacity font-65">Subtitle</p>
                     </div>
@@ -150,14 +149,14 @@
             <div class="cards flex">
                 <div class="card">
                     <img src="./img/youg.jpeg" alt="">
-                    <div class="overlay"></div>
+                    <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                     <h4>XX</h4>
                     <p class="opacity font-65">Subtitle</p>
                 </div>
 
                 <div class="card">
                     <img src="./img/einaudi.jpeg" alt="">
-                    <div class="overlay"></div>
+                    <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                     <h4>YY</h4>
                     <p class="opacity font-65">Subtitle</p>
                 </div>
@@ -175,7 +174,7 @@
                
         </div>
 
-        <div class="center-footer flex">
+        <div class="center-footer flex column">
             <div class="top-footer flex">
                 <i class="fa-solid fa-shuffle"></i>
                 <i class="fa-solid fa-backward-step"></i>
@@ -185,7 +184,7 @@
             </div>
 
             <div class="bottom-footer">
-
+                <span></span><div class="bar"></div>
             </div>
 
         </div>
