--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
 
             <div class="bottom-footer">
-                <span></span><div class="bar"></div>
+                <div class="bar"></div>
             </div>
 
         </div>
@@ -193,6 +193,9 @@
             <i class="fa-solid fa-list"></i>
             <i class="fa-solid fa-display"></i>
             <i class="fa-solid fa-volume-high"></i>
+            <div class="volume">
+                <div class="bar2"></div>
+            </div>
         </div>
     </footer>
 </body>
