--- a/index.html
+++ b/index.html
@@ -82,45 +82,45 @@
                 <div class="cards flex">
 
                     <div class="card">
-                        <img src="./img/metal_lifting.jpg" alt="disc1">
+                        <img src="./img/ira.jpeg" alt="disc1">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>Heavy Metal</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>IRA</h4>
+                        <p class="opacity font-65">Iosonouncane</p>
                     </div>
 
                     <div class="card">
-                        <img src="./img/stranger.jpeg" alt="disc2">
+                        <img src="./img/die.jpg" alt="disc2">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>Stranger Things</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>DIE</h4>
+                        <p class="opacity font-65">Iosonouncane</p>
                     </div>
 
                     <div class="card">
-                        <img src="./img/aquietplace.jpeg" alt="disc3">
+                        <img src="./img/rainbows.jpg" alt="disc3">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>A Quiet Place</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>In Rainbows</h4>
+                        <p class="opacity font-65">Radiohead</p>
                     </div>
 
                     <div class="card">
-                        <img src="./img/split.jpeg" alt="disc4">
+                        <img src="./img/undercurrent.jpg" alt="disc4">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>Split</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>Undercurrent</h4>
+                        <p class="opacity font-65">Bill Evans, Jim Hall</p>
                     </div>
 
                     <div class="card">
-                        <img src="./img/cure.jpeg" alt="disc5">
+                        <img src="./img/eno.jpg" alt="disc5">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>A Cure for Wellness</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>Ambient 1</h4>
+                        <p class="opacity font-65">Brian Eno</p>
                     </div>
 
                     <div class="card">
-                        <img src="./img/sinister.jpeg" alt="disc6">
+                        <img src="./img/anima.jpg" alt="disc6">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>Sinister</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>Anima</h4>
+                        <p class="opacity font-65">Thom Yorke</p>
                     </div>
                 </div>
             </section>    
@@ -129,17 +129,17 @@
                 <h2>Suggested for you</h2>
                 <div class="cards flex">
                     <div class="card">
-                        <img src="./img/radar.jpeg" alt="disc7">
+                        <img src="./img/yorke.jpg" alt="disc7">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>Release Radar</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>In The Absence Thereof</h4>
+                        <p class="opacity font-65">Tgom Yorke</p>
                     </div>
 
                     <div class="card">
-                        <img src="./img/mixdaily.jpeg" alt="disc8">
+                        <img src="./img/cage.jpg" alt="disc8">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
-                        <h4>Daily Mix 1</h4>
-                        <p class="opacity font-65">Subtitle</p>
+                        <h4>4'33"</h4>
+                        <p class="opacity font-65">John Cage</p>
                     </div>
                 </div>    
             </section>
@@ -149,17 +149,17 @@
             <h2>Most Popular</h2>
             <div class="cards flex">
                 <div class="card">
-                    <img class="radius" src="./img/youg.jpeg" alt="disc9">
+                    <img class="radius" src="./img/mozart.jpg" alt="disc9">
                     <div class="overlay opacity radius"><i class="fa-solid fa-play"></i></div>
-                    <h4>XX</h4>
-                    <p class="opacity font-65">Subtitle</p>
+                    <h4>Symphony n.41</h4>
+                    <p class="opacity font-65">W.A. Mozart</p>
                 </div>
 
                 <div class="card">
-                    <img class="radius" src="./img/einaudi.jpeg" alt="disc10">
+                    <img class="radius" src="./img/afx.jpg" alt="disc10">
                     <div class="overlay opacity radius"><i class="fa-solid fa-play"></i></div>
-                    <h4>YY</h4>
-                    <p class="opacity font-65">Subtitle</p>
+                    <h4>Drukqs</h4>
+                    <p class="opacity font-65">Aphex Twin</p>
                 </div>
             </div>    
         </section>
