--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div class="side-bar">
             <div class="side-top">
                 <div class="logo">
-                    <img src="./img/logo.svg" alt="">
+                    <img id="logo" src="./img/logo.svg" alt="logo sptfy">
+                    <img id="favicon" src="./img/favicon.ico" alt="logo sptfy">
                 </div>
                 <div class=" icon-list flex">
                     <ul>
@@ -132,7 +133,7 @@
                         <img src="./img/yorke.jpg" alt="disc7">
                         <div class="overlay opacity"><i class="fa-solid fa-play"></i></div>
                         <h4>In The Absence Thereof</h4>
-                        <p class="opacity font-65">Tgom Yorke</p>
+                        <p class="opacity font-65">Thom Yorke</p>
                     </div>
 
                     <div class="card">
